Fix deletion of groups so that a group doesn't exist() after being deleted :-) A group now exists if it has at least one non-deleted entry (including in subgroups).

+ added unittest for deleting a nested group, and check what gets written to disk.
BUG: 192266
FIXED-IN: 4.6

svn path=/trunk/KDE/kdelibs/; revision=1204914